# policy_proposals

./: .envrc  LICENSE  gunicorn.conf.py  manage.py  pyproject.toml
docs/: .editorconfig  PDP Phases diagram.graffle  example-afrinic.json  example-apnic.json  example-arin.json  example-lacnic.json  example-ripe-ncc.json  exchange-schema.json
fixtures/: rirs.yaml
policy_proposals/: asgi.py  settings.py  urls.py  wsgi.py
proposals/: admin.py  models.py  views.py
proposals/management/commands/: scrape_proposals.py
proposals/migrations/: 0001_initial.py  0002_alter_regionalinternetregistry_name_policyproposal.py  0003_alter_policyproposal_unique_together.py  0004_regionalinternetregistry_html_container.py  0005_alter_regionalinternetregistry_html_container.py  0006_regionalinternetregistry_slug.py  0007_alter_regionalinternetregistry_slug.py  0008_alter_regionalinternetregistry_slug.py  0009_remove_regionalinternetregistry_html_container_and_more.py  0010_regionalinternetregistry_identifier_selector.py  0011_regionalinternetregistry_name_selector_and_more.py  0012_regionalinternetregistry_url_template.py  0013_alter_regionalinternetregistry_url_template.py  0014_policyproposal_last_update.py  0015_remove_policyproposal_last_update_and_more.py  0016_regionalinternetregistry_date_selector_and_more.py  0017_regionalinternetregistry_timezone.py  0018_regionalinternetregistry_date_order.py  0019_stateoverridefromurl.py
proposals/templates/: home.html
