[tool.poetry]
name = "policy-proposals"
version = "0.1.0"
description = ""
authors = ["Sander Steffann <sander@steffann.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
beautifulsoup4 = "^4.12.1"
html5lib = "^1.1"
django-extensions = "^3.2.1"
requests = "^2.28.2"
lxml = "^4.9.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
